# Programy

LaTeX/: test.fdb_latexmk  test.fls  test.tex
Lab2/: parametr.c  sortowanie.c  temperatura.c
Projekty/: a.out  ciągFib.c  funkwadv2.c  menu.c  przeczer.c  przetwarzanieObrazow.c  tablice.c  test.c  trojmian.c  trzyZmienne.c
kodowanie/: skrypt10.sh
kodowanie/Cwiczenia_3/: a.out  ciągFib.c  eukalides.c  pascal.c  szukanie.c
kodowanie/PO/: BazaWczyt.txt  a.out  etap3.cpp  zad1.cpp
kodowanie/SFML_PP/: CMakeLists.txt  main.cpp
kodowanie/listy_stosy/: a.out  lista_dwukier.c  lista_jednokier.c  rpn.c  stos.c  stos.h  stos_ld.c  stos_lj.c
kodowanie/obrazy2/: argumenty.c  main.c  modul.c  modul.h  opcje.c  przetwarzaj  przetwarzanie2.c  struktura2.c  struktura_obraz.c  test.pgm
kodowanie/przetwarzanie_obrazu/: a.out  kontur.c  kontur_f18.pgm  kontur_pani.pgm  kor_gam_pani.pgm  negatyw_f18.pgm  negatyw_pani.pgm  odczyt.c  prog_pani.pgm  przetwarzanieObrazow.c  roz_his_pani.pgm  roz_poz_pani.pgm
kodowanie/sortowanie/: a.out  babelkowe.c  przez_wstawianie.c  scalanie.c  szybkie.c
kodowanie/tekst_przetwarzanie/: tekst.c
